# manimations

./: .gitignore  README.md  pyproject.toml
playground/: playground.py
